--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,10 +1,10 @@
     /* colors: #1FAEBE, #083F42, #C4C156, #E5CB8E, #B1DADC */
+
     $headerAndFooterBGC: #083F42;
     $headerAndFooterFC: #b1dadc;
     $titleColor: #C4C156;
     $textColor: #083F42;
     $backgroundColor: rgb(229, 249, 250);
-
     * {
         // background-image: url("https://edge.alluremedia.com.au/m/l/2013/03/TVMovies.jpg");
         // background-repeat: no-repeat;
@@ -15,9 +15,10 @@
             color: $textColor;
         }
     }
+
     header {
         .search-list {
-            list-style-type:none;
+            list-style-type: none;
             position: absolute;
             top: 100%;
             z-index: 1;
@@ -30,33 +31,46 @@
                 border-bottom-left-radius: 10px;
                 border-bottom-right-radius: 10px;
             }
-             .list-item {
+            .list-item {
                 padding-bottom: 10px;
             }
         }
     }
+
     main {
         background-color: $backgroundColor;
-    h1 {
-        text-align: center;
-        color: $titleColor;
-        padding: 3%;
+        color: $textColor;
+        h1 {
+            text-align: center;
+            color: $titleColor;
+            padding: 3%;
+        }
+        .js-wrapper {
+            display: flex;
+            justify-content: center;
+            text-align: center;
+        }
+        .wrapper-top-row {
+            display: flex;
+            justify-content: space-around;
+        }
+        .main-img {
+            width: 100%;
+            height: 100%;
+            padding-bottom: 4%;
+        }
+        p {
+            margin-bottom: 0px;
+            text-align: justify;
+            &:last-child {
+                padding-bottom: 2%;
+            }
+        }
     }
-    .js-wrapper {
-        display: flex;
-        justify-content: center;
-        text-align: center;
-    }
-    .wrapper-top-row {
-        display: flex;
-    }
-}
+
     header {
         background-color: $headerAndFooterBGC;
         color: $headerAndFooterFC;
-        p {
-            margin-bottom: 0px; 
-        }
     }
 
     footer {
