--- a/css/style.css
+++ b/css/style.css
@@ -36,11 +36,14 @@ main {
     width: 100%;
     height: 100%;
     padding-bottom: 4%; }
-  main p {
+  main .js-info-data {
     margin-bottom: 0px;
-    text-align: justify; }
-    main p:last-child {
-      padding-bottom: 2%; }
+    text-align: justify;
+    padding: 0 2%; }
+    main .js-info-data:last-child {
+      padding-bottom: 3%; }
+  main .title {
+    color: #afac58; }
 
 header {
   background-color: #083F42;
